# OSLab5-7

./: CMakeLists.txt  README.md
docs/: commands_list.md  lab5_7_reqs.txt  requirements.md  us.md
lib/: CMakeLists.txt
lib/aux_network_funcs/: CMakeLists.txt
lib/aux_network_funcs/get_ip_func/: get_ip_func.hpp
lib/infrastructure/: CMakeLists.txt  test.cpp
lib/infrastructure/connection_wrapper/: CMakeLists.txt  concurrent_queue.hpp  concurrent_queue_exceptions.hpp  connection_module.hpp  msg_convertions.hpp  msg_queue.hpp  pull_queue.hpp  push_queue.hpp
lib/infrastructure/connection_wrapper/auxiliary_entities/: bind_socket.hpp  connection_socket.hpp  pull_connection.hpp
lib/infrastructure/message/: CMakeLists.txt  aux_ser_funcs.hpp  message.hpp  message_module.hpp  message_types.hpp  serialization.hpp
lib/infrastructure/message/calc_tree_msgs/: calc_tree_msgs_module.hpp  kill_signal.hpp
lib/infrastructure/message/request/: request.hpp  request_types.hpp  serialization.hpp
lib/infrastructure/message/request/authorization/: authorization.hpp  authorization_types.hpp  authorization_with_name.hpp  serialization.hpp
lib/infrastructure/message/request/commands/: command.hpp  command_create.hpp  command_exec.hpp  command_pass.hpp  command_print_tree.hpp  command_types.hpp  serialization.hpp
lib/infrastructure/message/response/: response.hpp  response_module.hpp  response_types.hpp  serialization.hpp
lib/infrastructure/message/response/authorization_response/: authorization_accepted.hpp  authorization_denied.hpp  authorization_response.hpp  authorization_response_module.hpp  authorization_response_types.hpp  serialization.hpp
lib/infrastructure/message/response/calc_tree_resps/: bad_create_resp.hpp  bad_exec_resp.hpp  calc_tree_resps_module.hpp  good_create_resp.hpp  good_exec_resp.hpp  heartbeat.hpp  node_exist_response.hpp  node_is_dead_response.hpp
lib/infrastructure/message/response/invalid_request/: invalid_request.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  test.cpp
src/client/client_entity/: client_entity.hpp
src/client/client_entity/get_ip_func/: get_ip_func.hpp  headers.h
src/client/client_entity/parser/: parser.hpp
src/client/parser/: parser.hpp
src/client_server_infra/: CMakeLists.txt  infrastructure_module.hpp
src/client_server_infra/commands/: command.hpp  command_create.hpp  command_exec.hpp  command_print_tree.hpp  command_types.h  commands_module.hpp  serialization.hpp
src/client_server_infra/connection_wrapper/: auxiliary_entities.hpp  concurrent_queue.hpp  connection_module.hpp  msg_convertions.hpp  msg_queue.hpp  msg_queue_exceptions.hpp  pull_queue.hpp  push_queue.hpp  req_queue.hpp  request_queue.hpp  responce_queue.hpp  value_objects.hpp
src/client_server_infra/connection_wrapper/auxiliary_entities/: bind_socket.hpp  connection_exceptions.hpp  connection_socket.hpp  exceptions.hpp  one_socket_connection.hpp  pull_connection.hpp  push_connection.hpp  zmq_connection.hpp
src/client_server_infra/connection_wrapper/auxiliary_entities/auxiliary_value_objects/: value_objects.hpp
src/client_server_infra/message/: aux_ser_funcs.hpp  message.hpp  message_module.hpp  message_types.hpp  serialization.hpp
src/client_server_infra/message/request/: request.hpp  request_module.hpp  request_types.hpp  serialization.hpp
src/client_server_infra/message/request/authorization/: auth_with_name.hpp  authorization.hpp  authorization_module.hpp  authorization_types.hpp  authorization_with_name.hpp  serialization.hpp
src/client_server_infra/message/request/commands/: command.hpp  command_create.hpp  command_exec.hpp  command_pass.hpp  command_print_tree.hpp  command_types.hpp  serialization.hpp
src/client_server_infra/request/: request.hpp  request_types.hpp  serialization.hpp
src/client_server_infra/request/commands/: command.hpp  command_create.hpp  command_types.hpp  commands_module.hpp  serialization.hpp
src/cmake/: zmq.cmake
src/server/: CMakeLists.txt  server.cpp
src/server/calc_tree/: CMakeLists.txt  calc_tree.hpp
src/server/core/: calc_tree_node_main.cpp
src/server/core/server_entity/: calc_tree_dummy.hpp  calc_tree_node.hpp  server_entity.hpp
src/server/core/server_entity/validator/: validator.hpp
